[project]
name = "docker-euwallet-satosa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.14",
    "device-detector>=5.0.1",
    "fedservice",
    "idpyoidc",
    "idpysdjwt",
    "jwcrypto>=1.5.6",
    "openid4v",
    "pyeudiw[satosa]>=0.8.0",
    "pymongo>=4.11.3",
    "pystache>=0.6.8",
    "satosa-idpyop",
    "satosa-openid4vci",
    "sd-jwt>=0.10.4",
    "setuptools>=77.0.1",
    "swamid-plugins==0.1.0",
]

[tool.uv.sources]
idpyoidc = { git = "https://github.com/IdentityPython/idpy-oidc.git", rev = "issuer_metadata" }
openid4v = { git = "https://github.com/SUNET/openid4v.git" }
idpysdjwt = { git = "https://github.com/SUNET/idpy-sdjwt.git" }
fedservice = { git = "https://github.com/SUNET/fedservice.git" }
satosa-idpyop = { git = "https://github.com/SUNET/satosa-idpy.git" }
satosa-openid4vci = { git = "https://github.com/SUNET/satosa-openid4vci.git" }
